# packers-movers

./: .env.production  API_STATUS.md  CREATE_ACCESS_DIFFICULTIES.sql  CREATE_SERVICE_TYPES.sql  DEPLOYMENT_FIX.md  DEPLOYMENT_REPORT.md  RECREATE_SERVICE_TYPES.sql  REMOVE_FURNITURE_ITEMS.sql  REMOVE_URGENCY_PRICE.sql  RENAME_ADDITIONAL_NOTES.sql  RENAME_SCHEDULE_TO_PREFERRED.sql  RENAME_TO_URGENCY_LEVEL.sql  SYSTEM_STATUS.md  UPDATE_CLIENT_FIELDS.sql  UPDATE_URGENCY_LEVELS.sql  add_cancellation_reason_migration.sql  add_furniture_items.sql  check_deployment.py  create_clients_table.py  create_clients_table.sql  main.py  pyproject.toml  test_all_apis.py  test_connection.py  verify_deployment.py
app/core/: email.py
app/database/: db.py
app/models/: __init__.py  access_difficulty.py  client.py  job.py  payment.py  service_type.py  urgency_level.py  waste_type.py
app/routers/: __init__.py  access_difficulty.py  invoice.py  job.py  job_draft.py  pricing.py  service_type.py  urgency_level.py  waste_type.py
app/schemas/: auth.py  job.py  job_draft.py  urgency_level.py
migrations/: client_table_migration.sql
