[tool.poetry]
name = "emergency-property-clearance"
version = "1.0.0"
description = "FastAPI backend for UK-based Emergency Property Clearance & Operations platform"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.10.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.20"
psycopg2 = "^2.9.10"
dotenv = "^0.9.9"
sqlalchemy = "2.0.36"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.2.1"
psycopg2-binary = "^2.9.10"
reportlab = "^4.2.0"
asyncpg = "^0.30.0"
boto3 = "^1.37.0"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
